--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,11 @@ h1{
     margin: 20px;
 }
 
+.product_cell:hover {
+    border: 2px dashed red;
+    box-shadow: 0px 0px 10px red;
+}
+
 .laptop > h2 {
     color: blue;
 }
