--- a/css/flex.css
+++ b/css/flex.css
@@ -13,12 +13,15 @@ body{
 
 .padre{
     display: flex;
+    height: 100vh;
     flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 
 .hijo{
     width: 25%;
-    height: 300px;
+    height: 100px;
     border: solid 1px green;
     background-color: #fff;
 
