--- a/css/reto1.css
+++ b/css/reto1.css
@@ -6,64 +6,51 @@
 
 
 body{
-    background-color: hsl(30, 38%, 92%);;
-    
+   /* background-color: hsl(30, 38%, 92%); */
+    background-color: blue;
     
 }
 
+@media (min-width: 600px) {
+    body{
+        background-color: hsl(30, 38%, 92%);
+    }
+}
+
+@media (min-width: 900px) {
+    body{
+        background-color: red;
+    }
+}
+
+
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: ;
-
 }
 
 .left-image{
     background-image: url("../images/image-product-desktop.jpg");
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
-    height: 400px;
-    width:300px;
+    background-position: 0% 35%;
+    height: 200px;
+    width: 300px;
     background-color: hsl(0, 0%, 100%) ;
     border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
+    border-top-right-radius: 8px;
 }
 
 .content{
-   height: 400px;
+   /*height: 400px;*/
    background-color: hsl(0, 0%, 100%);
-   width: 250px;
-   border-top-right-radius: 8px;
+   width: 300px;
+   border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    padding: 20px;
-
-}
-
-.sub-title{
-    font-family: 'Montserrat', sans-serif;
-    color: hsl(228, 12%, 48%);
-    size: 12px;
-    font-weight: 500;
-    letter-spacing: 4px;
-}
-
-.title{
-    font-family: 'Fraunces', serif;
-    color: hsl(212, 21%, 14%);
-    margin-top: 15px;
-}
-
-.text-content{
-    font-family: 'Montserrat', sans-serif;
-    color: hsl(228, 12%, 48%);
-    margin-top: 15px;
-    margin-bottom: 15px;
-    font-size: 13px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    
 }
 
 .content-price{
@@ -94,10 +81,115 @@ body{
     border: none;
     padding: 10px;
     color: white;
-    cursor: pointer;
     border-radius: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 15px;
 }
+
+.boton:hover{
+    cursor: pointer;
+}
+
+@media (min-width: 600px) {
+    .container {
+        flex-direction: row;
+    }
+    
+    .left-image{
+        background-size: cover;
+        background-position: 50% 0%;
+        height: 400px;
+        width: 200px;
+        background-color: hsl(0, 0%, 100%) ;
+        border-radius: 0px;
+        border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
+    }
+    
+    .content{
+       height: 400px;
+       background-color: hsl(0, 0%, 100%);
+       width: 300px;
+       border-radius: 0px;
+       border-top-right-radius: 8px;
+       border-bottom-right-radius: 8px;
+       padding: 20px;
+    }
+}
+
+@media (min-width: 900px) {
+ 
+    
+    .left-image{
+        background-size: cover;
+        background-position: 50% 25%;
+        height: 400px;
+        width: 400px;
+        background-color: hsl(0, 0%, 100%) ;
+        border-radius: 0px;
+        border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
+    }
+    
+    .content{
+       height: 400px;
+       background-color: hsl(0, 0%, 100%);
+       width: 400px;
+       border-radius: 0px;
+       border-top-right-radius: 8px;
+       border-bottom-right-radius: 8px;
+       padding: 30px;
+    }
+    .boton{
+
+    margin-top: 30px;
+    padding: 20px;
+    font-size: 20px;
+    }
+
+    .content-price{
+     margin-top: 30px;
+    }
+    
+    .offert-price{
+    font-size: 40px;
+    font-weight: 800;
+    }
+    
+    .real-price{
+        margin-left: 10px;
+        font-size: 20px;
+    }
+
+}
+
+
+.sub-title{
+    font-family: 'Montserrat', sans-serif;
+    color: hsl(228, 12%, 48%);
+    size: 12px;
+    font-weight: 500;
+    letter-spacing: 4px;
+}
+
+.title{
+    font-family: 'Fraunces', serif;
+    color: hsl(212, 21%, 14%);
+    margin-top: 15px;
+}
+
+.text-content{
+    font-family: 'Montserrat', sans-serif;
+    color: hsl(228, 12%, 48%);
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 13px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    
+}
+
+
+
